--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -2,7 +2,11 @@ repoUrl: https://github.com/bitiq-io/gitops.git
 targetRevision: main
 argocdNamespace: openshift-gitops
 argocdInstanceName: openshift-gitops
-envFilter: ""   # if set to local/sno/prod, only that env is generated
+# Safe default: only render the selected env on a given cluster.
+# The bootstrap script always sets this to the chosen ENV, but if someone
+# installs this chart manually without overrides, prefer 'local' to avoid
+# multi-env collisions in shared namespaces (e.g., openshift-pipelines).
+envFilter: "local"   # if set to local|sno|prod, only that env is generated
 
 # Optional global override applied to generated env baseDomain values
 baseDomainOverride: ""
