--- a/charts/nostouch/Chart.yaml
+++ b/charts/nostouch/Chart.yaml
@@ -4,3 +4,5 @@ description: Ingestion pipeline streaming nostr relay events into Couchbase
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
+annotations:
+  bitiq.io/appversion: "true"
