--- a/charts/toy-web/Chart.yaml
+++ b/charts/toy-web/Chart.yaml
@@ -4,3 +4,5 @@ description: Frontend toy web sample deployment (Deployment + Service + Route)
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
+annotations:
+  bitiq.io/appversion: "true"
