--- a/charts/vault-runtime/templates/10-secrets-platform.yaml
+++ b/charts/vault-runtime/templates/10-secrets-platform.yaml
@@ -79,6 +79,34 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 
+{{- $repoPipelines := .Values.secrets.gitRepoCredsPipelines -}}
+{{- if $repoPipelines.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $repoPipelines.destinationName }}
+  namespace: {{ .Values.namespaces.pipelines }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $repoPipelines.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $repoPipelines.destinationName }}
+    type: {{ $repoPipelines.type | default "Opaque" }}
+{{- if $repoPipelines.destinationAnnotations }}
+    annotations:
+{{ toYaml $repoPipelines.destinationAnnotations | indent 6 }}
+{{- end }}
+{{- if $repoPipelines.destinationLabels }}
+    labels:
+{{ toYaml $repoPipelines.destinationLabels | indent 6 }}
+{{- end }}
+  vaultAuthRef: k8s
+{{- end }}
+
 {{- $gh := .Values.secrets.githubWebhook -}}
 {{- if $gh.enabled }}
 ---
