--- a/charts/bitiq-umbrella/Chart.yaml
+++ b/charts/bitiq-umbrella/Chart.yaml
@@ -3,4 +3,4 @@ name: bitiq-umbrella
 description: App-of-Apps to deploy platform components + a sample app for an ENV
 type: application
 version: 0.1.0
-appVersion: "toy-service-v0.3.32-commit.241bb2c_toy-web-v0.1.36-commit.b475204"
+appVersion: "nostouch-v0.0.10-commit.6869ec0_nostr_threads-v0.1.12-commit.a5e49ce_toy-service-v0.3.32-commit.241bb2c_toy-web-v0.1.36-commit.b475204"
