--- a/charts/ci-pipelines/tests/trigger_templates_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_templates_test.yaml
@@ -49,3 +49,17 @@ tests:
       - equal:
           path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
           value: 1.00069e+09
+  - it: renders TriggerTemplate for gitops maintenance pipeline
+    documentIndex: 4
+    asserts:
+      - isKind:
+          of: TriggerTemplate
+      - equal:
+          path: metadata.name
+          value: gitops-maintenance-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
+      - equal:
+          path: spec.resourcetemplates[0].spec.workspaces[1].secret.secretName
+          value: gitops-repo-creds
