--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -115,6 +115,42 @@ pipelines:
     fsGroup: ""
     eventTypes: ["push"]
 
+appVersionAutomation:
+  enabled: true
+  pipelineName: gitops-maintenance
+  gitUrl: https://github.com/bitiq-io/gitops.git
+  gitRevision: main
+  environments:
+    - local
+    - sno
+    - prod
+  toolImage: registry.access.redhat.com/ubi9/go-toolset:1.24.6
+  serviceAccountName: ""
+  fsGroup: ""
+  commitMessage: "chore(release): recompute umbrella appVersion"
+  botName: bitiq-gitops-bot
+  botEmail: gitops-bot@bitiq.io
+  push: true
+  credentials:
+    secretName: gitops-repo-creds
+    usernameKey: username
+    passwordKey: password
+  parity:
+    enabled: true
+    primaryEnv: local
+  trigger:
+    create: true
+    repoFullNames:
+      - bitiq-io/gitops
+    branches:
+      - refs/heads/main
+    skipCommitMessageRegex: '^chore\(release\): recompute umbrella appVersion'
+    skipAuthorLogins:
+      - bitiq-gitops-bot
+    eventTypes:
+      - push
+    sharedWorkspaceSize: 2Gi
+
 triggers:
   create: true
   # Control creation of the GitHub webhook Secret via chart (off by default).
