feat(charts): add vault-dev (PVC-backed Vault server) and umbrella wiring (disabled by default); pass-through toggle in argocd-apps

--- a/charts/argocd-apps/templates/applicationset-umbrella.yaml
+++ b/charts/argocd-apps/templates/applicationset-umbrella.yaml
@@ -166,6 +166,8 @@ spec:
               value: '{{ "{{ .vaultConfigRoleName }}" }}'
             - name: vault.config.policyName
               value: '{{ "{{ .vaultConfigPolicyName }}" }}'
+            - name: vault.server.enabled
+              value: '{{ "{{ .vaultServerEnabled | default false }}" }}'
       destination:
         server: '{{ "{{ .cluster }}" }}'
         namespace: '{{ "{{ .appNamespace }}" }}'
