feat(vault-dev): enable PVC-backed dev Vault and bootstrap automation

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -63,7 +63,7 @@ envs:
     vaultConfigConnectionRole: kube-auth
     vaultConfigRoleName: gitops-local
     vaultConfigPolicyName: gitops-local
-    vaultServerEnabled: false
+    vaultServerEnabled: true
     nostrSiteEnabled: true
     ollamaEnabled: true
     ollamaMode: external
