--- a/charts/vault-dev/values.yaml
+++ b/charts/vault-dev/values.yaml
@@ -25,6 +25,8 @@ resources: {}
 
 bootstrap:
   enabled: true
+  createSecret: true
+  secretName: vault-bootstrap
   # Names to use in policies/roles for dev parity
   appPolicyName: gitops-local
   appRoleName: gitops-local
