--- a/charts/vault-dev/templates/rbac-bootstrap.yaml
+++ b/charts/vault-dev/templates/rbac-bootstrap.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.enabled .Values.bootstrap.enabled .Values.bootstrap.createSecret }}
+{{- if and .Values.enabled .Values.bootstrap.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -25,4 +25,3 @@ subjects:
   - kind: ServiceAccount
     name: {{ printf "%s-bootstrap" .Values.service.name }}
 {{- end }}
-
