--- a/charts/vault-dev/templates/statefulset.yaml
+++ b/charts/vault-dev/templates/statefulset.yaml
@@ -19,8 +19,10 @@ spec:
         app.kubernetes.io/name: {{ .Chart.Name }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      {{- with .Values.podSecurityContext }}
       securityContext:
-        runAsNonRoot: true
+{{ toYaml . | indent 8 }}
+      {{- end }}
       containers:
         - name: vault
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -36,6 +38,10 @@ spec:
               value: "true"
             - name: VAULT_DISABLE_MLOCK
               value: "true"
+            {{- if .Values.logLevel }}
+            - name: VAULT_LOG_LEVEL
+              value: {{ .Values.logLevel | quote }}
+            {{- end }}
           readinessProbe:
             httpGet:
               path: /v1/sys/health
