--- a/charts/nostr-threads/templates/deployment.yaml
+++ b/charts/nostr-threads/templates/deployment.yaml
@@ -51,6 +51,10 @@ spec:
             - name: GIT_COMMIT_HASH
               value: {{ .Values.env.gitCommitHash | quote }}
 {{- end }}
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
 {{- if and .Values.secrets.couchbase.enabled .Values.secrets.couchbase.secretName }}
             - name: COUCHBASE_USER
               valueFrom:
