--- a/charts/cert-manager-config/values-local.yaml
+++ b/charts/cert-manager-config/values-local.yaml
@@ -44,7 +44,10 @@ operatorOverrides:
 dns:
   upstreamResolvers:
     enabled: true
+    # Use the CRC host resolver first so *.apps-crc.testing stays reachable from pods.
     upstreams:
+      - address: 192.168.127.1
+        port: 53
       - address: 1.1.1.1
         port: 53
       - address: 8.8.8.8
