--- a/charts/vault-dev/templates/statefulset.yaml
+++ b/charts/vault-dev/templates/statefulset.yaml
@@ -27,6 +27,7 @@ spec:
         - name: vault
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ["vault"]
           args: ["server", "-config=/vault/config/vault.hcl"]
           ports:
             - name: http
