--- a/charts/vault-dev/templates/job-bootstrap.yaml
+++ b/charts/vault-dev/templates/job-bootstrap.yaml
@@ -48,17 +48,22 @@ spec:
                 UNSEAL_KEY=$(cat "$SECRET_PATH/unseal_key")
               fi
 
+              CURL_URL="https://github.com/moparisthebest/static-curl/releases/download/v7.86.0/curl-linux-amd64"
+
               ensure_curl() {
                 if command -v curl >/dev/null 2>&1; then
                   return 0
                 fi
-                if command -v apk >/dev/null 2>&1; then
-                  log "installing curl (apk add curl)"
-                  apk add --no-cache curl >/dev/null
-                  return 0
+                if [ ! -x /tmp/curl ]; then
+                  log "downloading static curl"
+                  if ! wget -q -O /tmp/curl "${CURL_URL}"; then
+                    log "ERROR: failed to download curl from ${CURL_URL}"
+                    return 1
+                  fi
+                  chmod +x /tmp/curl
                 fi
-                log "ERROR: curl is required but not available"
-                return 1
+                export PATH="/tmp:${PATH}"
+                return 0
               }
 
               wait_for_vault() {
